--- a/clientes.html
+++ b/clientes.html
@@ -1,9 +1,9 @@
-<div class="row" ng-init="initClientes(true)">
+<div class="row" ng-init="initClientes()">
     <div class="col s12 m12 l12 xl12">
         <div class="card">
             <div class="card-content">
                 <span class="card-title">Clientes registrados</span>
-                <table id="data-table-clientes" class="responsive-table display" cellspacing="0">
+                <table id="data-table-clientes" class="striped" cellspacing="0">
                     <thead>
                         <tr>
                             <th>Clave Cliente</th>
