--- a/configuracion.html
+++ b/configuracion.html
@@ -1,16 +1,16 @@
-<div class="row" ng-init="initConfiguracion(true)">
+<div class="row" ng-init="initConfiguracion()">
     <div class="col s12 m12 l12 xl12">
         <div class="card">
             <div class="card-content">
                 <span class="card-title">Configuración General</span>
                 <div class="row">
-                    <div class="input-field col s2">
+                    <div class="input-field col s12 m2">
                         <input id="tasaFinanciamiento" type="text" ng-model="configuracion.tasaFinanciamiento">
                         <label for="tasaFinanciamiento" class="active">Tasa Financiamiento</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="input-field col s2">
+                    <div class="input-field col s12 m2">
                         <input id="porcentajeEnganche" type="text" ng-model="configuracion.porcentajeEnganche">
                         <label for="porcentajeEnganche" class="active">Porcentaje Enganche</label>
                     </div>
