--- a/ventas.html
+++ b/ventas.html
@@ -1,9 +1,9 @@
-<div class="row" ng-init="initVentas(true)">
+<div class="row" ng-init="initVentas()">
     <div class="col s12 m12 l12 xl12">
         <div class="card">
             <div class="card-content">
                 <span class="card-title">Ventas activas</span>
-                <table id="data-table-ventas" class="responsive-table display" cellspacing="0">
+                <table id="data-table-ventas" class="striped bordered" cellspacing="0">
                     <thead>
                         <tr>
                             <th>Folio Venta</th>
@@ -48,20 +48,20 @@
         <div ng-if="proceso === 'paso1'"> <!-- Paso 1 -->
             <h4>Registro de ventas</h4>
             <div class="row">
-                <div class="col s3 offset-s9">
+                <div class="col s5 offset-s7 m3 offset-m9">
                     <b>Folio Venta: {{folioVenta}}</b>
                 </div>
             </div>
             <div class="row">
-                <div class="col s7">
+                <div class="col s12 m7">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">person</i>
                         <input autocomplete="off" type="text" id="autocomplete-input-cliente" class="autocomplete" placeholder="Buscar Cliente" ng-keyup="buscarCliente()">
                         <label for="autocomplete-input-cliente" class="active">Cliente</label>
                     </div>
                 </div>
-                <div class="col s5" ng-show="clienteSeleccionado !== undefined">
-                    <div class="input-field col s6">
+                <div class="col s12 m5" ng-show="clienteSeleccionado !== undefined">
+                    <div class="input-field col s12">
                         <input id="rfc" type="text" class="validate" ng-model="clienteSeleccionado.rfc" disabled>
                         <label for="rfc" class="active">RFC</label>
                     </div>
@@ -73,14 +73,14 @@
                 </div>
             </div>
             <div class="row espacio-arriba-fila">
-                <div class="col s7">
+                <div class="col s8 m7">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">person</i>
                         <input autocomplete="off" type="text" id="autocomplete-input-articulo" class="autocomplete" placeholder="Buscar Artículo" ng-keyup="buscarArticulo()">
                         <label for="autocomplete-input-articulo" class="active">Artículo</label>
                     </div>
                 </div>
-                <div class="col s5 espacio-arriba-boton" ng-show="articuloSeleccionado !== undefined">
+                <div class="col s4 m5 espacio-arriba-boton" ng-show="articuloSeleccionado !== undefined">
                     <button class="btn waves-effect waves-light green white-text" ng-click="agregarArticulo()">
                         <i class="material-icons">add</i>
                     </button>
@@ -93,7 +93,7 @@
             </div>
             <div class="row">
                 <div class="col s12">
-                    <table class="responsive-table display" cellspacing="0">
+                    <table class="striped" cellspacing="0">
                         <thead>
                             <tr>
                                 <th>Descripción Artículo</th>
