--- a/clientes.html
+++ b/clientes.html
@@ -41,7 +41,7 @@
     <div class="modal-content">
         <h4>Registro de Clientes</h4>
         <div class="row">
-            <div class="col s3 offset-s9">
+            <div class="col s4 offset-s8 m3 offset-m9">
                 <b>Clave: {{claveCliente}}</b>
             </div>
         </div>
