--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="navbar-fixed">
             <nav class="navbar-color light-blue darken-4">
                 <div class="nav-wrapper">
-                    <ul class="right hide-on-med-and-down">
+                    <ul class="right">
                         <li>
                             <a href="javascript:void(0);" class="sin-cursor">Fecha: {{fechaActual}}</a>
                         </li>
